--- a/index.pug
+++ b/index.pug
@@ -33,13 +33,12 @@
 				.container
 					h3 Каталог круизов
 					p.sorting Сортировать круизы по цене
-					.cards
+					.cards.container_x.clearfix
 						.card
-							img(src="img/lighthouse.png" width="100%" alt="Lighthouse")
+							img(src="img/lighthouse-desk.png" width="100%" alt="Lighthouse")
 							.card-description
 								h4 
 									| Морской круиз 
-									br 
 									| в Анапу
 								.card-description__title
 									p Маршрут: 
@@ -50,9 +49,9 @@
 								.card-description__price
 									| 49 000 руб.
 								.card__special.hit__special
-									span Хит продаж
+									span Хит продаж		
 						.card
-							img(src="img/kater.png" width="100%" alt="Kater")
+							img(src="img/kater-desk.png" width="100%" alt="Kater")
 							.card-description
 								h4 Обзорная морская прогулка с экскурсией
 								.card-description__title
@@ -70,7 +69,7 @@
 								.card__special.discount__special
 									span Акция
 						.card
-							img(src="img/beach.png" width="100%" alt="Beach")
+							img(src="img/beach-desk.png" width="100%" alt="Beach")
 							.card-description
 								h4 Морская прогулка в&nbspГеленджик
 								.card-description__title
@@ -85,7 +84,7 @@
 								.card__special.discount__special
 									span Скидка 10%
 						.card
-							img(src="img/harbor.png" width="100%" alt="Lighthouse")
+							img(src="img/harbor-desk.png" width="100%" alt="Harbor")
 							.card-description
 								h4 Морской круиз в&nbspНовороссийск
 								.card-description__title
@@ -94,6 +93,18 @@
 									br
 									p Продолжительность: 
 									span 13 ч. 0 мин.
+								.card-description__price
+									| 14 800 руб.
+						.card
+							img(src="img/sea-desk.png" width="100%" alt="Sea")
+							.card-description
+								h4 Морская прогулка в Абрау-Дюрсо  
+								.card-description__title
+									p Маршрут: 
+									span Сочи-Абрау-Дюрсо
+									br
+									p Продолжительность: 
+									span 11 ч. 0 мин.
 								.card-description__price
 									| 14 800 руб.
 					button.button__general.button__catalog
