--- a/css/style.scss
+++ b/css/style.scss
@@ -16,9 +16,10 @@ body {
 .navigation {
 	width: 100%;
 	margin: 0 auto;
-	background-image: url(../img/bg-header.png);
+	background-image: url(../img/bg-desk.png);
 	background-repeat: no-repeat;
 	background-position: center;
+	background-color: #f3f3f3;
 }
 
 .container {
@@ -107,16 +108,11 @@ ul.menu {
 }
 
 .logo__image {
-	// width: 715px;
-	margin: 85px auto 0;
+	margin: 35px auto 0;
 	h2 {
-		padding-bottom: 10px;
 		color: #0d3351;
 		font-family: $robo;
-		font-size: 26px;
-		font-weight: 400;
-		line-height: 48px;
-		letter-spacing: 1.3px;
+		
 	}
 	p {
 		color: #0d3351;
@@ -178,6 +174,34 @@ button:after {
   transform: translateY(0%);
   }
 }
+//
+
+.box {
+  width: 555px;
+  height: 628px;
+  background-color: green;
+  margin: 10px 10px;
+  float: left;
+}
+.boxs {
+  width: 555px;
+  height: 304px;
+  background-color: red;
+  margin: 24px 25px;
+  float: left;
+}
+
+// .clearfix {
+//   clear: both;
+//   background-color: #e74c3c;
+// }
+// .container_x {
+// 	width: 1200px;
+// /*   width: 1220px;
+//   height: 1122px; */
+//   background-color: yellow;
+//   color: green;
+// }
 
 @import "components/catalog.scss";
 @import "components/footer.scss";
