--- a/css/components/footer.scss
+++ b/css/components/footer.scss
@@ -12,7 +12,6 @@ footer {
 }
 
 ul.footer__links {
-	
 	list-style-type: none;
 	text-align: left;
 	a {
@@ -22,6 +21,10 @@ ul.footer__links {
 		font-size: 14px;
 		font-weight: 400;
 		line-height: 24px;
+    &:hover,
+    &:active {
+      color: #f20542;
+    }
 	}
 }
 
@@ -53,11 +56,11 @@ ul.footer__links {
 }
 
 .social-btn:hover {
-  background-color: #e74246;
+  background-color: #f20542;
 }
 
 .social-btn:active {
-  background-color: #d7373b;
+  background-color: #f20542;
   box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
 }
 
